fix layout issue

--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -159,9 +159,3 @@ $navigation-layout-icon-size: 20;
 
   }
 }
-
-.dechetObjInfo {
-  padding: 10;
-  vertical-align: center;
-  color: $blue-dark;
-}
